# fast_template

./: .env.example  .gitignore  Dockerfile.dev  docker-compose.yml  pyproject.toml
app/: main.py  models.py
app/api/: __init__.py
app/api/v1/: __init__.py
app/api/v1/todos/: router.py
app/core/: config.py  setup.py
app/core/database/: __init__.py  _base.py  mixin.py  session.py  url.py
app/schema/: __init__.py  todo.py
